Fix missing translation keys
- Add cities.days key to all locale files (en, zh, ja, es)
- Add meetup.status.upcoming key to English locale file
- Fixes translation warnings for cities.days and meetup.status.upcoming
- All languages now have consistent translation keys

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -925,6 +925,12 @@
       "coworking": "Coworking",
       "coffee": "Coffee"
     },
+    "status": {
+      "upcoming": "Upcoming",
+      "ongoing": "Ongoing",
+      "completed": "Completed",
+      "cancelled": "Cancelled"
+    },
     "title": "Nomad Connect"
   },
   "voteModal": {
@@ -1893,6 +1899,7 @@
     "quickUpvote": "Quick Upvote",
     "votes": "votes",
     "stayDays": "Stay Days",
+    "days": "days",
     "visaType": "Visa Type",
     "wifiSpeed": "WiFi Speed",
     "costOfLiving": "Cost of Living",
