--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -583,6 +583,7 @@
     "wifiSpeed": "Velocidad WiFi",
     "visaType": "Tipo de Visa",
     "stayDays": "Días de Estadía",
+    "days": "días",
     "votes": "votos",
     "quickUpvote": "Voto Rápido Positivo",
     "quickDownvote": "Voto Rápido Negativo",
