--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1945,6 +1945,7 @@
     "wifiSpeed": "WiFi速度",
     "visaType": "签证类型",
     "stayDays": "停留天数",
+    "days": "天",
     "votes": "票",
     "quickUpvote": "快速点赞",
     "quickDownvote": "快速点踩",
