--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -478,6 +478,7 @@
     "wifiSpeed": "WiFi速度",
     "visaType": "ビザタイプ",
     "stayDays": "滞在日数",
+    "days": "日",
     "votes": "票",
     "quickUpvote": "クイックアップ投票",
     "quickDownvote": "クイックダウン投票",
