Internationalize homepage location and invitation features
- Add translation keys for location permission prompts
- Add translation keys for invitation rewards and sharing
- Replace hardcoded Chinese strings with translation keys
- Support for en, zh, ja, es languages
- Fixes: location enable, personalized recommendations, allow location, manual city selection, recent data, invite sharing, premium rewards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2416,6 +2416,14 @@
     "avgConnectionTime": "Average Connection Time",
     "exploreGlobal": "Explore Global",
     "enableLocationToDiscover": "Enable location to discover nearby Nomads",
+    "enableLocation": "Enable Location",
+    "getPersonalizedRecommendations": "Get personalized recommendations based on location",
+    "allowLocation": "Allow Location",
+    "selectCityManually": "Select City Manually",
+    "recent30DaysData": "Recent 30 days data",
+    "basedOnRealRequests": "Based on {count} real requests",
+    "shareInviteLink": "Share invite link or explore popular cities",
+    "inviteReward": "Get 1 month premium for each invite (max 3 months, reward sent when friend completes registration)",
     "baliBeachCoworkingDesc": "Beachside coworking, enjoy sunshine and sea breeze",
     "baliBeachCoworking": "Bali Beach Coworking",
     "chiangMaiDevCoworkDesc": "Developer coworking space, share tech and project experience",
