--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2520,6 +2520,14 @@
     "baliBeachCoworking": "Coworking en la Playa de Bali",
     "baliBeachCoworkingDesc": "Coworking junto a la playa, disfrutar del sol y la brisa marina",
     "enableLocationToDiscover": "Habilitar ubicación para descubrir Nómadas cercanos",
+    "enableLocation": "Habilitar Ubicación",
+    "getPersonalizedRecommendations": "Obtener recomendaciones personalizadas basadas en ubicación",
+    "allowLocation": "Permitir Ubicación",
+    "selectCityManually": "Seleccionar Ciudad Manualmente",
+    "recent30DaysData": "Datos de los últimos 30 días",
+    "basedOnRealRequests": "Basado en {count} solicitudes reales",
+    "shareInviteLink": "Compartir enlace de invitación o explorar ciudades populares",
+    "inviteReward": "Obtén 1 mes premium por cada invitación (máximo 3 meses, recompensa enviada cuando el amigo complete el registro)",
     "exploreGlobal": "Explorar Global",
     "successRate": "tasa de éxito",
     "avgConnectionTime": "tiempo promedio de conexión",
