--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2366,6 +2366,14 @@
     "baliBeachCoworking": "バリビーチコワーキング",
     "baliBeachCoworkingDesc": "ビーチサイドコワーキング、日光と海風を楽しむ",
     "enableLocationToDiscover": "位置情報を有効にして近くのノマドを発見",
+    "enableLocation": "位置を有効にする",
+    "getPersonalizedRecommendations": "位置に基づいたパーソナライズされた推奨を取得",
+    "allowLocation": "位置を許可",
+    "selectCityManually": "手動で都市を選択",
+    "recent30DaysData": "最近30日間のデータ",
+    "basedOnRealRequests": "{count}回の実際のリクエストに基づく",
+    "shareInviteLink": "招待リンクを共有するか、人気都市を探索",
+    "inviteReward": "1人招待するごとに1ヶ月プレミアム（最大3ヶ月、友人が登録完了時に配布）",
     "exploreGlobal": "グローバルを探索",
     "successRate": "成功率",
     "avgConnectionTime": "平均接続時間",
