--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -2511,6 +2511,14 @@
     "baliBeachCoworking": "巴厘岛海滩联合办公",
     "baliBeachCoworkingDesc": "海滩边的联合办公，享受阳光和海风",
     "enableLocationToDiscover": "启用定位以发现附近Nomads",
+    "enableLocation": "启用定位",
+    "getPersonalizedRecommendations": "获取基于位置的个性化推荐",
+    "allowLocation": "允许定位",
+    "selectCityManually": "手动选城市",
+    "recent30DaysData": "近30天数据",
+    "basedOnRealRequests": "基于 {count} 次真实请求",
+    "shareInviteLink": "分享邀请链接或探索热门城市",
+    "inviteReward": "每邀请1人得1个月高级版（上限3个月，好友完成注册即发放）",
     "exploreGlobal": "探索全球",
     "successRate": "成功率",
     "avgConnectionTime": "平均连接时间",
